# PC-Data-Gen

./: CMakeLists.txt  TODO.txt  deps-CMakeLists.txt
inc/: CMakeLists.txt  SDL_stbimage.h  body.h  color32.h  context.h  gfxfunctions.h  image.h  noncopyable.h  parameter.h  parameter_ro.h  pixel32.h  term.h  utility.h  vec2.h
src/: CMakeLists.txt  context.cpp  gfxfunctions.cpp  image.cpp  main.cpp  utility.cpp
